# mediapipe-playground

./: .gitignore  README.md  pyproject.toml
src/mediapipe_playground/: __main__.py  app.py  app2.py  cli.py  utils.py
